--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LuxTestUtils"
 uuid = "ac9de150-d08f-4546-94fb-7472b5760531"
 authors = ["Avik Pal <avikpal@mit.edu>"]
-version = "0.1.0"
+version = "0.1.1"
 
 [deps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -19,7 +19,7 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 ComponentArrays = "0.13"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
-JET = "0.5, 0.6, 0.7"
+JET = "0.4, 0.5, 0.6, 0.7"
 Optimisers = "0.2"
 Preferences = "1"
 ReverseDiff = "1"
