--- a/.github/workflows/FormatCheck.yml
+++ b/.github/workflows/FormatCheck.yml
@@ -3,7 +3,7 @@ name: FormatCheck
 on:
   push:
     branches:
-      - 'main'
+      - 'master'
       - 'release-'
     tags: ['*']
   pull_request:
