--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ ComponentArrays = "0.13"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
 Functors = "0.4"
-JET = "0.4, 0.5, 0.6, 0.7"
+JET = "0.4, 0.5, 0.6, 0.7, 0.8"
 Optimisers = "0.2"
 Preferences = "1"
 ReverseDiff = "1"
