--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ FiniteDifferences = "26cc04aa-876d-5657-8c51-4c34ba976000"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
+LuxCore = "bb33d45b-7691-41d6-9220-0943567d0623"
 LuxDeviceUtils = "34f89e08-e1d5-43b4-8944-0b49ac560553"
 Optimisers = "3bd65402-5787-11e9-1adc-39752487f4e2"
 Preferences = "21216c6a-2e73-6563-6e65-726566657250"
@@ -25,6 +26,7 @@ FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
 Functors = "0.4"
 JET = "0.4, 0.5, 0.6, 0.7, 0.8"
+LuxCore = "0.1"
 LuxDeviceUtils = "0.1"
 Optimisers = "0.2"
 Preferences = "1"
