CompatHelper: bump compat for Optimisers to 0.3, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ Functors = "0.4"
 JET = "0.4, 0.5, 0.6, 0.7, 0.8"
 LuxCore = "0.1"
 LuxDeviceUtils = "0.1"
-Optimisers = "0.2"
+Optimisers = "0.2, 0.3"
 Preferences = "1"
 ReverseDiff = "1"
 Tracker = "0.2"
