--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
 Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 
 [compat]
-ComponentArrays = "0.13, 0.14"
+ComponentArrays = "0.13, 0.14, 0.15"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
 Functors = "0.4"
