--- a/.github/workflows/Downstream.yml
+++ b/.github/workflows/Downstream.yml
@@ -2,10 +2,10 @@ name: Downstream
 on:
   pull_request:
     branches:
-      - main
+      - master
   push:
     branches:
-      - main
+      - master
 concurrency:
   # Skip intermediate builds: always.
   # Cancel intermediate builds: only if it is a pull request build.
