--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "LuxTestUtils"
 uuid = "ac9de150-d08f-4546-94fb-7472b5760531"
 authors = ["Avik Pal <avikpal@mit.edu>"]
-version = "0.1.13"
+version = "0.1.14"
 
 [deps]
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
@@ -25,7 +25,7 @@ ComponentArrays = "0.13, 0.14, 0.15"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
 Functors = "0.4"
-JET = "0.4, 0.5, 0.6, 0.7, 0.8"
+JET = "0.8"
 LuxCore = "0.1"
 LuxDeviceUtils = "0.1"
 Optimisers = "0.2, 0.3"
@@ -33,7 +33,7 @@ Preferences = "1"
 ReverseDiff = "1"
 Tracker = "0.2"
 Zygote = "0.6"
-julia = "1.6"
+julia = "1.9"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
