CompatHelper: bump compat for JET to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ ComponentArrays = "0.15"
 FiniteDifferences = "0.12"
 ForwardDiff = "0.10"
 Functors = "0.4"
-JET = "0.8"
+JET = "0.8, 0.9"
 LuxCore = "0.1"
 LuxDeviceUtils = "0.1"
 Optimisers = "0.2, 0.3"
