--- a/Project.toml
+++ b/Project.toml
@@ -7,12 +7,13 @@ version = "1.0.0"
 ADTypes = "47edcb42-4c32-4615-8424-f2b9edc5f35b"
 ChainRulesCore = "d360d2e6-b24c-11e9-a2a3-2a2ae2dbcce4"
 ComponentArrays = "b0b7db55-cfe3-40fc-9ded-d10e2dbeff66"
+DispatchDoctor = "8d63f2c5-f18a-4cf2-ba9d-b3f60fc568c8"
 Enzyme = "7da242da-08ed-463a-9acd-ee780be4f1d9"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Functors = "d9f16b24-f501-4c13-a1f2-28368ffc5196"
 JET = "c3a54625-cd67-489e-a8e7-0a5a0ff4e31b"
-LuxDeviceUtils = "34f89e08-e1d5-43b4-8944-0b49ac560553"
+MLDataDevices = "7e8f7934-dd98-4c1a-8fe8-92b47a384d40"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Tracker = "9f7883ad-71c0-57eb-9f7f-b5c9e6d3789c"
@@ -22,12 +23,13 @@ Zygote = "e88e6eb3-aa80-5325-afca-941959d7151f"
 ADTypes = "1.5.3"
 ChainRulesCore = "1.24.0"
 ComponentArrays = "0.15.14"
+DispatchDoctor = "0.4.12"
 Enzyme = "0.12.22"
 FiniteDiff = "2.23.1"
 ForwardDiff = "0.10.36"
 Functors = "0.4.11"
 JET = "0.9.6"
-LuxDeviceUtils = "0.1.24"
+MLDataDevices = "1.0.0"
 ReverseDiff = "1.15.3"
 Test = "1.10"
 Tracker = "0.2.34"
