chore: run formatter

--- a/.JuliaFormatter.toml
+++ b/.JuliaFormatter.toml
@@ -1,8 +1,8 @@
 style = "sciml"
 whitespace_in_kwargs = false
-always_use_return = true
 margin = 92
 indent = 4
 format_docstrings = true
 separate_kwargs_with_semicolon = true
 always_for_in = true
+join_lines_based_on_source = false
