--- a/Project.toml
+++ b/Project.toml
@@ -29,6 +29,8 @@ Enzyme = "0.12.22"
 FiniteDiff = "2.23.1"
 ForwardDiff = "0.10.36"
 Functors = "0.4.11"
+Hwloc = "3"
+InteractiveUtils = "<0.0.1, 1"
 JET = "0.9.6"
 MLDataDevices = "1.0.0"
 MetaTesting = "0.1.0"
@@ -41,9 +43,11 @@ julia = "1.10"
 
 [extras]
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+Hwloc = "0e44f5e4-bd66-52a0-8798-143a42290a1d"
+InteractiveUtils = "b77e0a4c-d291-57a0-90e8-8db25a27a240"
 MetaTesting = "9e32d19f-1e4f-477a-8631-b16c78aa0f56"
 ReTestItems = "817f1d60-ba6b-4fd5-9520-3cf149f6a823"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["CUDA", "MetaTesting", "ReTestItems", "Test"]
+test = ["CUDA", "Hwloc", "InteractiveUtils", "MetaTesting", "ReTestItems", "Test"]
