fix: more aggressive testing for Enzyme functional

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,6 +29,7 @@ jobs:
         version:
           - "1"
           - "pre"
+          - "nightly"
         os:
           - ubuntu-latest
           - macos-latest
