chore: update Enzyme version

--- a/Project.toml
+++ b/Project.toml
@@ -24,7 +24,7 @@ ADTypes = "1.5.3"
 ChainRulesCore = "1.24.0"
 ComponentArrays = "0.15.14"
 DispatchDoctor = "0.4.12"
-Enzyme = "0.12.22. 0.13"
+Enzyme = "0.12.22, 0.13"
 FiniteDiff = "2.23.1"
 ForwardDiff = "0.10.36"
 Functors = "0.4.11"
